add attendance status bar

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -50,6 +50,12 @@
                                 <span><%= scheduleDate %></span>
                             </div>
                         </div>
+                        <div class="col-sm-6 mb-4">
+                            <div class="staff-details-item taff-id text-center">
+                                <span class="details-sub-head">Reg Status:</span>
+                                <span><%= (!!status === null)?'Pending':status %></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
