change attendance status bar name

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -52,7 +52,7 @@
                         </div>
                         <div class="col-sm-6 mb-4">
                             <div class="staff-details-item taff-id text-center">
-                                <span class="details-sub-head">Reg Status:</span>
+                                <span class="details-sub-head">Attendance:</span>
                                 <span><%= (!!status === null)?'Pending':status %></span>
                             </div>
                         </div>
