change event name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                 </nav>
                 <div class="content-wrapper">
                     <div class="heading">
-                        <h2>Annual Training 2018</h2>
+                        <h2>VLA Annual Training 2018</h2>
                     </div>
                     <div class="content">
                         <p>Registering your attendance is now easy, just log in to your account to register your presence at the training</p>
