add training details

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -79,6 +79,37 @@
             <h4>Important:</h4>
             <p>The code can only be used by one person, please do not share your code with anyone.</p>
         </div>
+        <div class="training-div">
+            <div class="heading text-center">
+                <h3>Training Details</h3>
+            </div>
+            <div class="training text-center">
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-4 mb-4">
+                        <div class="venue">
+                            <h5>Venue:</h5>
+                            <p>Centre for Management Development(CMD)</p>
+                            <p>Shangisha Off Old Lagos-Ibadan Expressway</p>
+                            <p>By Motorways Ikeja, Lagos State</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-4">
+                        <div class="time-date">
+                            <h5>Date:</h5>
+                            <p><%= scheduleDate %></p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="time-date">
+                            <h5>Time:</h5>
+                            <p>9:00 am</p>
+                            <em><small>No African time</small></em>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer>
             <div class="foot-note">
                 For complaints, send an email to techteam@viclawrence.com or call 01-4617223.
