--- a/views/statics/css/dashboard.css
+++ b/views/statics/css/dashboard.css
@@ -69,11 +69,38 @@ body {
     box-shadow: 1px 1px 4px -1px rgba(0,0,0,.4);
 }
 
+.training-div {
+    background-color: rgba(0,30,80,.8);
+    color: white;
+    padding: 40px 2%;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+.training-div h3 {
+    margin-bottom: 50px;
+}
+.training {
+    margin: auto;
+}
+.training p {
+    margin: 0;
+}
+.training .venue {
+}
+
 footer {
     background-color: black;
-    padding: 5px;
+    padding: 25px 15px 15px;
     text-align: center;
     color: rgba(180,180,180,0.5);
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 footer .foot-note {
     padding: 20px;
