--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -53,7 +53,7 @@
                         <div class="col-sm-6 mb-4">
                             <div class="staff-details-item taff-id text-center">
                                 <span class="details-sub-head">Attendance:</span>
-                                <span><%= (status === null)?'Pending':status %></span>
+                                <span><%= (status === null)?'Pending':'Present' %></span>
                             </div>
                         </div>
                     </div>
