Add surcharge information

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -59,6 +59,11 @@
                     </div>
                 </div>
             </div>
+            <div class="warning-div">
+                <div class="warning">
+                    <p>Attendance at the training is compulsory. Lateness or absenteeism would attract a surcharge of ₦5,000</p>
+                </div>
+            </div>
             <div class="report">
                 <p id="message"></p>
             </div>
