--- a/views/statics/css/dashboard.css
+++ b/views/statics/css/dashboard.css
@@ -16,7 +16,7 @@ body {
     padding: 0 3%;
 }
 .staff-details {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 .staff-details-item {
     background-color: white;
@@ -31,6 +31,22 @@ body {
     margin-right: 10px;
     text-align: left;
     opacity: .5;
+}
+.warning {
+    background-color: rgb(100,10,0);
+    width: 90%;
+    margin: auto auto 50px;
+    padding: 15px;
+    text-align: center;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+.warning p {
+    margin: 0;
+    color: white !important;
 }
 #message {
     width: 500px;
@@ -84,9 +100,6 @@ body {
 }
 .training {
     margin: auto;
-}
-.training p {
-    margin: 0;
 }
 .training .venue {
 }
