--- a/views/statics/css/dashboard.css
+++ b/views/statics/css/dashboard.css
@@ -33,11 +33,12 @@ body {
     opacity: .5;
 }
 .warning-div {
-    margin: auto auto 80px;
+    margin-bottom: 80px;
 }
 .warning {
     background-color: rgb(100,10,0);
     width: 90%;
+    margin: auto;
     padding: 15px;
     text-align: center;
     box-sizing: border-box;
